# OpenCLForHPC

./: CMakeLists.txt  LICENCE  README.md
01-sequential-cpu/: CMakeLists.txt
01-sequential-cpu/src/: main.c
02-naive-opencl/: CMakeLists.txt
02-naive-opencl/src/: lu_kernels.cl  main.cpp
03-block-hybrid/: CMakeLists.txt
03-block-hybrid/src/: lu_kernels_block.cl  main.cpp
04-async-vectorized/: CMakeLists.txt
04-async-vectorized/src/: lu_kernels_optimized.cl  main.cpp
common/: CMakeLists.txt
common/include/: helpers.h  verification.h
common/src/: verification.cpp
extras/: CMakeLists.txt  main.cpp
extras/kernels/: my_gemm_improved.cl  my_gemm_kernel.cl  opencv_gemm.cl
